Wed Feb 18 16:10:05 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trialing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Fri Jan 23 22:19:39 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Add AC_PROG_INSTALL since it's need by the install
		rules.

Tue Nov 18 18:57:07 1997  Tom Yu  <tlyu@mit.edu>

	* quad_cksum.c (des_quad_cksum): Reorder parameters to match the
	prototype in include/kerberosIV/des.h.

	* pcbc_encrypt.c: Fix up parameters to use a des_cblock* as the
	ivec to match the prototype in include/kerberosIV/des.h.

	* Makefile.in: Garbage collect some old library build system
	stuff.

Mon Oct 27 01:14:16 1997  Tom Yu  <tlyu@mit.edu>

	* pcbc_encrypt.c, quad_cksum.c: Punt duplicates of definitions;
 	use local des.h only, as that appears to be safe.  Also, replace
	uses of KRB_INT32 with DES_INT32 to remove temptation to misuse.

	* des.h: Don't include k5-int.h any longer, as des_int.h already
	gets it.

Tue Oct 14 15:40:46 1997  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* Makefile.in (LIBMAJOR): Bump major version due to possible
 	change in type sizes.

Sat Feb 22 18:55:52 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Use some of the new library list build rules in
		win-post.in

Sat Feb 22 01:07:34 1997  Sam Hartman  <hartmans@tertius.mit.edu>

	* read_passwd.c: Don't base definitions on unix being defined.


Fri Feb 21 19:11:33 1997  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (SHLIB_EXPLIBS): Depend on -lcrypto

Sun Feb 16 23:29:09 1997  Richard Basch  <basch@lehman.com>

	* pcbc_encrypt.c: Export des_pcbc_encrypt (win16/win32)

Thu Nov 21 11:55:16 EST 1996    Richard Basch   <basch@lehman.com>

        * Makefile.in: win32 build

	* des.c, des.h, key_sched.c, new_rnd_key.c, pcbc_encrypt.c,
	read_passwd.c, unix_time.c: