@@ -22,4 +22,6 @@ dnl
 KRB5_RUN_FLAGS
 KRB5_BUILD_LIBOBJS
 KRB5_BUILD_LIBRARY_WITH_DEPS
+KRB5_BUILD_PROGRAM
+dnl
 V5_AC_OUTPUT_MAKEFILE
